// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes organizations routes detail components OrganizationDetail renders loading icon if aircrafts not loaded 1`] = `
"<div class=\\"LoadingIcon-container-3\\">
  <div class=\\"MuiCircularProgress-root LoadingIcon-icon-4 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate\\" style=\\"width: 40px; height: 40px;\\" role=\\"progressbar\\"><svg class=\\"MuiCircularProgress-svg\\" viewBox=\\"22 22 44 44\\">
      <circle class=\\"MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate\\" cx=\\"44\\" cy=\\"44\\" r=\\"20.2\\" fill=\\"none\\" stroke-width=\\"3.6\\"></circle>
    </svg></div>
</div>"
`;

exports[`routes organizations routes detail components OrganizationDetail renders loading icon if organization not loaded 1`] = `
"<div class=\\"LoadingIcon-container-3\\">
  <div class=\\"MuiCircularProgress-root LoadingIcon-icon-4 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate\\" style=\\"width: 40px; height: 40px;\\" role=\\"progressbar\\"><svg class=\\"MuiCircularProgress-svg\\" viewBox=\\"22 22 44 44\\">
      <circle class=\\"MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate\\" cx=\\"44\\" cy=\\"44\\" r=\\"20.2\\" fill=\\"none\\" stroke-width=\\"3.6\\"></circle>
    </svg></div>
</div>"
`;

exports[`routes organizations routes detail components OrganizationDetail renders organization if organization and aircrafts loaded 1`] = `
"<div class=\\"OrganizationDetail-container-1\\">
  <h4 class=\\"MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom\\"></h4>
  <div class=\\"MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3\\" data-cy=\\"aircraft-list\\">
    <div class=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4\\">
      <div class=\\"MuiPaper-root MuiPaper-elevation1 MuiCard-root AircraftList-card-47 MuiPaper-rounded\\" data-cy=\\"aircraft-card-o7flC7jw8jmkOfWo8oyA\\"><a class=\\"MuiButtonBase-root MuiCardActionArea-root AircraftList-actionArea-49\\" tabindex=\\"0\\" role=\\"button\\" href=\\"/organizations/my_org/aircrafts/o7flC7jw8jmkOfWo8oyA\\">
          <div class=\\"MuiCardContent-root AircraftList-cardContent-48\\">
            <h6 class=\\"MuiTypography-root MuiTypography-h6\\">HBKFW</h6>
          </div><span class=\\"MuiCardActionArea-focusHighlight\\"></span><span class=\\"MuiTouchRipple-root\\"></span>
        </a></div>
    </div>
    <div class=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4\\">
      <div class=\\"MuiPaper-root MuiPaper-elevation1 MuiCard-root AircraftList-card-47 MuiPaper-rounded\\" data-cy=\\"aircraft-card-BKi7HYAIoe1i75H3LMk1\\"><a class=\\"MuiButtonBase-root MuiCardActionArea-root AircraftList-actionArea-49\\" tabindex=\\"0\\" role=\\"button\\" href=\\"/organizations/my_org/aircrafts/BKi7HYAIoe1i75H3LMk1\\">
          <div class=\\"MuiCardContent-root AircraftList-cardContent-48\\">
            <h6 class=\\"MuiTypography-root MuiTypography-h6\\">HBKOF</h6>
          </div><span class=\\"MuiCardActionArea-focusHighlight\\"></span><span class=\\"MuiTouchRipple-root\\"></span>
        </a></div>
    </div>
  </div>
</div>"
`;

exports[`routes organizations routes detail components OrganizationDetail renders with create button for aircrafts if is manager 1`] = `
"<div class=\\"OrganizationDetail-container-1\\">
  <h4 class=\\"MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom\\"></h4>
  <div class=\\"MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3\\" data-cy=\\"aircraft-list\\">
    <div class=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4\\">
      <div class=\\"MuiPaper-root MuiPaper-elevation1 MuiCard-root AircraftList-card-47 MuiPaper-rounded\\" data-cy=\\"aircraft-create-button\\"><button class=\\"MuiButtonBase-root MuiCardActionArea-root AircraftList-actionArea-49\\" tabindex=\\"0\\" type=\\"button\\">
          <div class=\\"MuiCardContent-root AircraftList-cardContent-48\\"><svg class=\\"MuiSvgIcon-root AircraftList-createIcon-50\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\" role=\\"presentation\\">
              <path d=\\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z\\"></path>
            </svg><span class=\\"MuiTypography-root AircraftList-createText-51 MuiTypography-button\\">Neues Flugzeug erstellen</span></div><span class=\\"MuiCardActionArea-focusHighlight\\"></span><span class=\\"MuiTouchRipple-root\\"></span>
        </button></div>
    </div>
    <div class=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4\\">
      <div class=\\"MuiPaper-root MuiPaper-elevation1 MuiCard-root AircraftList-card-47 MuiPaper-rounded\\" data-cy=\\"aircraft-card-o7flC7jw8jmkOfWo8oyA\\"><a class=\\"MuiButtonBase-root MuiCardActionArea-root AircraftList-actionArea-49\\" tabindex=\\"0\\" role=\\"button\\" href=\\"/organizations/my_org/aircrafts/o7flC7jw8jmkOfWo8oyA\\">
          <div class=\\"MuiCardContent-root AircraftList-cardContent-48\\">
            <h6 class=\\"MuiTypography-root MuiTypography-h6\\">HBKFW</h6>
          </div><span class=\\"MuiCardActionArea-focusHighlight\\"></span><span class=\\"MuiTouchRipple-root\\"></span>
        </a></div>
    </div>
    <div class=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4\\">
      <div class=\\"MuiPaper-root MuiPaper-elevation1 MuiCard-root AircraftList-card-47 MuiPaper-rounded\\" data-cy=\\"aircraft-card-BKi7HYAIoe1i75H3LMk1\\"><a class=\\"MuiButtonBase-root MuiCardActionArea-root AircraftList-actionArea-49\\" tabindex=\\"0\\" role=\\"button\\" href=\\"/organizations/my_org/aircrafts/BKi7HYAIoe1i75H3LMk1\\">
          <div class=\\"MuiCardContent-root AircraftList-cardContent-48\\">
            <h6 class=\\"MuiTypography-root MuiTypography-h6\\">HBKOF</h6>
          </div><span class=\\"MuiCardActionArea-focusHighlight\\"></span><span class=\\"MuiTouchRipple-root\\"></span>
        </a></div>
    </div>
  </div>
</div>"
`;

exports[`routes organizations routes detail components OrganizationDetail renders without create button if aircrafts limit is reached 1`] = `
"<div class=\\"OrganizationDetail-container-1\\">
  <h4 class=\\"MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom\\"></h4>
  <div class=\\"MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3\\" data-cy=\\"aircraft-list\\">
    <div class=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4\\">
      <div class=\\"MuiPaper-root MuiPaper-elevation1 MuiCard-root AircraftList-card-47 MuiPaper-rounded\\" data-cy=\\"aircraft-card-o7flC7jw8jmkOfWo8oyA\\"><a class=\\"MuiButtonBase-root MuiCardActionArea-root AircraftList-actionArea-49\\" tabindex=\\"0\\" role=\\"button\\" href=\\"/organizations/my_org/aircrafts/o7flC7jw8jmkOfWo8oyA\\">
          <div class=\\"MuiCardContent-root AircraftList-cardContent-48\\">
            <h6 class=\\"MuiTypography-root MuiTypography-h6\\">HBKFW</h6>
          </div><span class=\\"MuiCardActionArea-focusHighlight\\"></span><span class=\\"MuiTouchRipple-root\\"></span>
        </a></div>
    </div>
    <div class=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4\\">
      <div class=\\"MuiPaper-root MuiPaper-elevation1 MuiCard-root AircraftList-card-47 MuiPaper-rounded\\" data-cy=\\"aircraft-card-BKi7HYAIoe1i75H3LMk1\\"><a class=\\"MuiButtonBase-root MuiCardActionArea-root AircraftList-actionArea-49\\" tabindex=\\"0\\" role=\\"button\\" href=\\"/organizations/my_org/aircrafts/BKi7HYAIoe1i75H3LMk1\\">
          <div class=\\"MuiCardContent-root AircraftList-cardContent-48\\">
            <h6 class=\\"MuiTypography-root MuiTypography-h6\\">HBKOF</h6>
          </div><span class=\\"MuiCardActionArea-focusHighlight\\"></span><span class=\\"MuiTouchRipple-root\\"></span>
        </a></div>
    </div>
  </div>
</div>"
`;

exports[`routes organizations routes detail components OrganizationDetail shows message if organization was not found or user is not granted 1`] = `
"<div class=\\"OrganizationDetail-container-1\\">
  <div class=\\"OrganizationDetail-notFoundMessage-2\\">Die Organisation <strong>my_org</strong> wurde nicht gefunden oder dein Konto <strong>test@opendigital.ch</strong> ist nicht berechtigt, auf die Organisation zuzugreifen. Bitte wende dich an den Administrator der Organisation.</div>
</div>"
`;
